--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -71,27 +71,24 @@ http {
         text/x-component
         text/x-cross-domain-policy;
 
-    # Main server configuration
+    # Main server configuration for HTTP
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
         
-        # Redirect to HTTPS in production
-        # Uncomment in production:
-        # return 301 https://$host$request_uri;
-        
+        # Enable in production to redirect all HTTP to HTTPS
         server_name _;
         
-        # Basic security headers
+        # Enhanced security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()";
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' https://www.googletagmanager.com https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline'; img-src 'self' data: https://static-cdn.jtvnw.net; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://api.twitch.tv https://id.twitch.tv; frame-src 'none'; object-src 'none';" always;
         
-        # Enable HTTP Strict Transport Security in production
-        # Uncomment in production:
-        # add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
+        # Enable only in production
+        # return 301 https://$host$request_uri;
         
         # Root directory for static files
         root /usr/share/nginx/html;
@@ -173,25 +170,31 @@ http {
             proxy_read_timeout 120s;
         }
 
-        # Static assets with optimal caching
-        location ~* \.(?:jpg|jpeg|gif|png|ico|svg)$ {
+        # Optimized static asset handling with improved caching
+        location ~* \.(jpg|jpeg|png|gif|ico|svg)$ {
             expires 7d;
             add_header Cache-Control "public, max-age=604800, immutable";
             try_files $uri =404;
+            access_log off;
+            log_not_found off;
         }
         
         # JavaScript and CSS files with content hash in filename (immutable)
-        location ~* \.(?:css|js)$ {
+        location ~* \.(css|js)$ {
             expires 1y;
             add_header Cache-Control "public, max-age=31536000, immutable";
             try_files $uri =404;
+            access_log off;
+            log_not_found off;
         }
         
         # Font files
-        location ~* \.(?:woff|woff2|ttf|eot)$ {
+        location ~* \.(woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, max-age=31536000, immutable";
             try_files $uri =404;
+            access_log off;
+            log_not_found off;
         }
         
         # Health check
@@ -225,31 +228,4 @@ http {
             internal;
         }
     }
-
-    # HTTPS server
-    # Uncomment in production after adding SSL certificates
-    # server {
-    #     listen 443 ssl http2;
-    #     listen [::]:443 ssl http2;
-    #     server_name akane.production;
-    # 
-    #     # SSL configuration
-    #     ssl_certificate /etc/nginx/ssl/akane.production.crt;
-    #     ssl_certificate_key /etc/nginx/ssl/akane.production.key;
-    #     ssl_session_timeout 1d;
-    #     ssl_session_cache shared:SSL:50m;
-    #     ssl_session_tickets off;
-    # 
-    #     # Modern SSL configuration
-    #     ssl_protocols TLSv1.3 TLSv1.2;
-    #     ssl_prefer_server_ciphers off;
-    # 
-    #     # OCSP Stapling
-    #     ssl_stapling on;
-    #     ssl_stapling_verify on;
-    # 
-    #     # Rest of configuration similar to HTTP server
-    #     root /usr/share/nginx/html;
-    #     # ... include the same location blocks as the HTTP server
-    # }
 }
