--- a/landing/docker-compose.yml
+++ b/landing/docker-compose.yml
@@ -1,74 +1,81 @@
 version: '3.8'
 
 services:
+  # Development environment
   dev:
     build:
       context: .
       dockerfile: Dockerfile
-      target: build
+      target: development
     volumes:
-      - .:/app
-      - /app/node_modules  # Exclude node_modules from mounting
-      - /app/dist  # Exclude dist from mounting
+      - .:/app:delegated
+      - /app/node_modules
+      - /app/dist
     ports:
-      - "5174:5173"  # Vite dev server
-      - "3000:3000"  # Express API server
+      - "${DEV_PORT:-5173}:5173"
+      - "${API_PORT:-3000}:3000"
     environment:
       - NODE_ENV=development
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-      - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
-    command: sh -c "npm run dev -- --host 0.0.0.0 & node server/index.js & wait"
+      - CHOKIDAR_USEPOLLING=true
+      - HOST=0.0.0.0
+      - VITE_DEV_SERVER_HOST=0.0.0.0
+      - VITE_DEV_SERVER_PORT=5173
+    command: >
+      sh -c "
+        echo 'Starting development servers...' &&
+        npm run dev -- --host 0.0.0.0 & 
+        node server/index.js & 
+        wait
+      "
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
       timeout: 5s
       retries: 3
-      start_period: 5s
+      start_period: 10s
 
+  # Build service
   build:
     build:
       context: .
       dockerfile: Dockerfile
-      target: build
-      args:
-        - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-        - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
+      target: builder
     volumes:
       - dist_data:/app/dist
     environment:
       - NODE_ENV=production
-      - VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+      - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
     command: >
       sh -c "
         mkdir -p /app/dist &&
         npm run build &&
-        echo 'Build completed. Copying to volume...' &&
-        cp -r /app/dist/* /app/dist/ &&
-        chmod -R 755 /app/dist
+        cp -r dist/* /app/dist/ &&
+        chmod -R 755 /app/dist &&
+        echo 'Build completed successfully'
       "
 
-  prod:
+  # Standalone server for testing production build
+  serve:
     build:
       context: .
       dockerfile: Dockerfile
-    restart: unless-stopped
+      target: production
     ports:
-      - "3000:3000"
+      - "${SERVE_PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-      - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
       - PORT=3000
     volumes:
       - dist_data:/app/dist:ro
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
-      interval: 30s
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 10s
       timeout: 5s
       retries: 3
       start_period: 5s
 
 volumes:
   dist_data:
-    external: true
-    name: akane_landing_dist_data
+    name: akane_dist_data
