--- a/landing/docker-compose.yml
+++ b/landing/docker-compose.yml
@@ -1,26 +1,38 @@
-version: '3.8'
+# Note: 'version' attribute is obsolete and will be ignored in newer Docker Compose versions
+
+# Define common configurations to avoid repetition
+x-logging: &default-logging
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
 
 services:
-  # Development environment
+  # Development environment with hot reloading
   dev:
     build:
       context: .
       dockerfile: Dockerfile
       target: development
     volumes:
+      # Mount the source code for development
       - .:/app:delegated
-      - /app/node_modules
-      - /app/dist
+      # Use Docker volumes for node_modules and dist for better performance
+      - node_modules:/app/node_modules
+      - dist:/app/dist
     ports:
       - "${DEV_PORT:-5173}:5173"
       - "${API_PORT:-3000}:3000"
     environment:
       - NODE_ENV=development
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-      - CHOKIDAR_USEPOLLING=true
-      - HOST=0.0.0.0
+      - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
+      # Vite optimization settings
       - VITE_DEV_SERVER_HOST=0.0.0.0
       - VITE_DEV_SERVER_PORT=5173
+      - CHOKIDAR_USEPOLLING=true
+      # Performance tuning
+      - NODE_OPTIONS="--max-old-space-size=2048"
     command: >
       sh -c "
         echo 'Starting development servers...' &&
@@ -34,24 +46,41 @@ services:
       timeout: 5s
       retries: 3
       start_period: 10s
+    logging: *default-logging
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 2G
 
-  # Build service
+  # Build service for production assets
   build:
     build:
       context: .
       dockerfile: Dockerfile
       target: builder
     volumes:
-      - ${SKIP_VOLUME_COPY:-./dist}:/app/dist
+      - dist_data:/app/dist
     environment:
       - NODE_ENV=production
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-      - SKIP_VOLUME_COPY=${SKIP_VOLUME_COPY:-}
+      # Optimize build performance
+      - NODE_OPTIONS="--max-old-space-size=4096"
+      - VITE_BUILD_MINIFY=true
+      - VITE_BUILD_SOURCEMAP=false
     command: >
       sh -c "
+        mkdir -p /app/dist &&
         npm run build &&
+        cp -r dist/* /app/dist/ &&
+        chmod -R 755 /app/dist &&
         echo 'Build completed successfully'
       "
+    deploy:
+      resources:
+        limits:
+          cpus: '3.0'
+          memory: 4G
 
   # Standalone server for testing production build
   serve:
@@ -65,6 +94,9 @@ services:
       - NODE_ENV=production
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
       - PORT=3000
+      # Enable compression and caching
+      - ENABLE_COMPRESSION=true
+      - HTTP_CACHE_CONTROL="public, max-age=86400"
     volumes:
       - dist_data:/app/dist:ro
     healthcheck:
@@ -73,7 +105,22 @@ services:
       timeout: 5s
       retries: 3
       start_period: 5s
+    logging: *default-logging
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.1'
+          memory: 128M
 
+# Named volumes for data persistence and better performance
 volumes:
+  # Volume for storing built artifacts
   dist_data:
-    name: akane_dist_datat
+    name: akane_dist_data
+  # Volume for development node_modules
+  node_modules:
+  # Volume for development build artifacts
+  dist:
