--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,14 @@
-# Note: 'version' attribute is obsolete and will be ignored in newer Docker Compose versions
-
-# Define common configurations to avoid repetition
-x-logging: &default-logging
-  driver: "json-file"
-  options:
-    max-size: "10m"
-    max-file: "3"
-
-x-restart-policy: &restart-policy
-  restart: unless-stopped
-
-x-common-environment: &common-env
-  NODE_ENV: production
-
+# Updated docker-compose.yml for root directory
 services:
   # Nginx reverse proxy with optimized settings
   nginx:
     image: nginx:alpine
-    <<: *restart-policy
+    restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-      - dist_data:/usr/share/nginx/html:ro
+      - ./landing/dist:/usr/share/nginx/html:ro
       - nginx_cache:/var/cache/nginx
       - nginx_logs:/var/log/nginx
     depends_on:
@@ -39,8 +23,6 @@ services:
       interval: 60s
       timeout: 5s
       retries: 3
-    logging: *default-logging
-    # Add resource limits to prevent resource exhaustion
     deploy:
       resources:
         limits:
@@ -53,14 +35,16 @@ services:
   # n8n workflow automation with optimized configuration
   n8n:
     image: n8nio/n8n:latest
-    <<: *restart-policy
+    restart: unless-stopped
     environment:
-      <<: *common-env
+      NODE_ENV: production
       N8N_HOST: n8n
       N8N_PORT: 5678
       N8N_PROTOCOL: http
       WEBHOOK_URL: https://akane.production/n8n/
+      # Pass both environment variable formats
       TWITCH_CLIENT_ID: ${TWITCH_CLIENT_ID}
+      VITE_TWITCH_CLIENT_ID: ${TWITCH_CLIENT_ID}
       TWITCH_CLIENT_SECRET: ${TWITCH_CLIENT_SECRET}
       # Performance tuning parameters
       N8N_DIAGNOSTICS_ENABLED: "false"
@@ -76,7 +60,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 20s
-    logging: *default-logging
     deploy:
       resources:
         limits:
@@ -94,19 +77,20 @@ services:
       target: production
       args:
         - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-    <<: *restart-policy
-    depends_on:
-      - build
+        - VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+    restart: unless-stopped
     environment:
-      <<: *common-env
+      NODE_ENV: production
+      # Pass both environment variable formats
       TWITCH_CLIENT_ID: ${TWITCH_CLIENT_ID}
+      VITE_TWITCH_CLIENT_ID: ${TWITCH_CLIENT_ID}
       TWITCH_CLIENT_SECRET: ${TWITCH_CLIENT_SECRET}
       PORT: 3000
       # Add compression and cache settings
       ENABLE_COMPRESSION: "true"
       HTTP_CACHE_CONTROL: "public, max-age=86400"
     volumes:
-      - dist_data:/app/dist:ro
+      - ./landing/dist:/app/dist:ro
     networks:
       - akane-network
     healthcheck:
@@ -115,7 +99,6 @@ services:
       timeout: 5s
       retries: 3
       start_period: 10s
-    logging: *default-logging
     deploy:
       resources:
         limits:
@@ -124,32 +107,6 @@ services:
         reservations:
           cpus: '0.2'
           memory: 256M
-
-  # Build service with mounted volume for artifact storage
-  build:
-    build:
-      context: ./landing
-      dockerfile: Dockerfile
-      target: builder
-      args:
-        - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-        - NODE_ENV=production
-    volumes:
-      - dist_data:/app/dist
-    environment:
-      <<: *common-env
-      VITE_TWITCH_CLIENT_ID: ${TWITCH_CLIENT_ID}
-    # Run the build and copy built files to the shared volume
-    command: >
-      sh -c "
-        mkdir -p /app/dist &&
-        npm run build &&
-        cp -r dist/* /app/dist/ &&
-        chmod -R 755 /app/dist &&
-        echo 'Build completed successfully'
-      "
-    networks:
-      - akane-network
 
 # Separate network for application components
 networks:
@@ -160,12 +117,10 @@ networks:
       config:
         - subnet: 172.28.0.0/16
 
-# Persistent volumes for data storage
+# Persistent volumes for remaining data
 volumes:
   n8n_data:
     name: akane_n8n_data
-  dist_data:
-    name: akane_dist_data
   nginx_cache:
     name: akane_nginx_cache
   nginx_logs:
