--- a/landing/Dockerfile
+++ b/landing/Dockerfile
@@ -1,4 +1,4 @@
-# Optimized multi-stage Dockerfile
+# Optimized multi-stage Dockerfile with improved environment variable handling
 FROM node:20-alpine AS base
 
 # Add dependencies needed for node-gyp and other native modules
@@ -32,13 +32,27 @@ HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
 # Use a single command with & to run both processes
 CMD ["sh", "-c", "npm run dev -- --host 0.0.0.0 & node server/index.js"]
 
-# Builder stage
+# Builder stage - with special handling for environment variables
 FROM base AS builder
 ENV NODE_ENV=production
+ARG TWITCH_CLIENT_ID
+ARG VITE_TWITCH_CLIENT_ID
+
+# If TWITCH_CLIENT_ID is set, use it for both variables
+ENV TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+ENV VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+
 # Copy dependencies from deps stage
 COPY --from=deps /app/node_modules ./node_modules
 # Copy source code
 COPY . .
+
+# Display environment variables for debugging during build
+RUN echo "Building with environment: TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID:-not set}"
+
+# Create the env.js directly to ensure it has the right values even if Vite doesn't
+RUN mkdir -p public && echo "// This file is created during Docker build\nwindow.ENV = window.ENV || {};\nwindow.ENV.TWITCH_CLIENT_ID = \"${TWITCH_CLIENT_ID}\";\nwindow.ENV.VITE_TWITCH_CLIENT_ID = \"${TWITCH_CLIENT_ID}\";\nwindow.TWITCH_CLIENT_ID = \"${TWITCH_CLIENT_ID}\";\nconsole.log('[ENV] Loaded from Docker build');" > public/env.js
+
 # Build the application - output to /app/dist
 RUN npm run build
 
@@ -47,16 +61,21 @@ FROM base AS production
 ENV NODE_ENV=production
 WORKDIR /app
 
+# Accept environment variables at runtime as well
+ARG TWITCH_CLIENT_ID
+ENV TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+ENV VITE_TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
+
 # Only copy production dependencies and server code
 COPY --from=deps /app/prod_modules ./node_modules
 COPY --from=builder /app/server ./server
+COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/public ./public
 COPY package.json ./
 
 # Create a non-root user
 RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nodejs && \
-    mkdir -p /app/dist && \
     chown -R nodejs:nodejs /app
 
 # Switch to non-root user
